Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.140",
+	"version": "1.0.141",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -146,15 +146,15 @@
 			"require": "./dist/preact/layouts.cjs",
 			"types": "./dist/types/preact/layouts.d.ts"
 		},
-		"./preact/apis/router/index": {
-			"import": "./dist/preact/apis/router/index.js",
-			"require": "./dist/preact/apis/router/index.cjs",
-			"types": "./dist/types/preact/apis/router/index.d.ts"
+		"./preact/apis/router": {
+			"import": "./dist/preact/apis/router.js",
+			"require": "./dist/preact/apis/router.cjs",
+			"types": "./dist/types/preact/apis/router.d.ts"
 		},
-		"./preact/apis/ssr/index": {
-			"import": "./dist/preact/apis/ssr/index.js",
-			"require": "./dist/preact/apis/ssr/index.cjs",
-			"types": "./dist/types/preact/apis/ssr/index.d.ts"
+		"./preact/apis/ssr": {
+			"import": "./dist/preact/apis/ssr.js",
+			"require": "./dist/preact/apis/ssr.cjs",
+			"types": "./dist/types/preact/apis/ssr.d.ts"
 		}
 	},
 	"sideEffects": [
@@ -183,8 +183,8 @@
 		"./src/preact/apis.ts",
 		"./src/preact/components.ts",
 		"./src/preact/layouts.ts",
-		"./src/preact/apis/router/index.tsx",
-		"./src/preact/apis/ssr/index.tsx"
+		"./src/preact/apis/router.tsx",
+		"./src/preact/apis/ssr.tsx"
 	],
 	"module": "./dist/index.js",
 	"main": "./dist/index.cjs",
@@ -233,7 +233,7 @@
 				"build": {
 					"appType": "cma",
 					"targetEnv": "any",
-					"entryFiles": ["./src/*.{ts,tsx}", "./src/preact/*.{ts,tsx}", "./src/preact/apis/*/index.{ts,tsx}"]
+					"entryFiles": ["./src/*.{ts,tsx}", "./src/preact/*.{ts,tsx}", "./src/preact/apis/*.{ts,tsx}"]
 				},
 				"ssrBuild": {
 					"appType": "",
