Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.171",
+	"version": "1.0.172",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -136,6 +136,11 @@
 			"require": "./dist/preact/apis/iso.cjs",
 			"types": "./dist/types/preact/apis/iso.d.ts"
 		},
+		"./preact/apis/ssr": {
+			"import": "./dist/preact/apis/ssr.js",
+			"require": "./dist/preact/apis/ssr.cjs",
+			"types": "./dist/types/preact/apis/ssr.d.ts"
+		},
 		"./preact/components/404": {
 			"import": "./dist/preact/components/404.js",
 			"require": "./dist/preact/components/404.cjs",
@@ -191,6 +196,7 @@
 		"./src/url.ts",
 		"./src/version.ts",
 		"./src/preact/apis/iso.tsx",
+		"./src/preact/apis/ssr.tsx",
 		"./src/preact/components/404.tsx",
 		"./src/preact/components/body.tsx",
 		"./src/preact/components/data.tsx",
