--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.197",
+	"version": "1.0.198",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -249,7 +249,7 @@
 					"lock": []
 				},
 				"build": {
-					"appType": "cma",
+					"appType": "lib",
 					"targetEnv": "any",
 					"entryFiles": ["./src/*.{ts,tsx}", "./src/preact/*/*.{ts,tsx}"]
 				},
