Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"private": false,
 	"publishConfig": {
-		"access": "restricted"
+		"access": "public"
 	},
-	"version": "1.0.199",
+	"version": "1.0.200",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -223,7 +223,7 @@
 		"fast-equals": "^4.0.3",
 		"ignore": "^5.2.4",
 		"luxon": "^3.4.1",
-		"micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.43",
+		"micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.44",
 		"moize": "^6.1.6",
 		"preact": "^10.17.1",
 		"preact-render-to-string": "^6.2.1",
@@ -233,7 +233,7 @@
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/dev-deps": "^1.0.167"
+		"@clevercanyon/dev-deps": "^1.0.169"
 	},
 	"overrides": {},
 	"cpu": ["x64", "arm64"],
