--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "1.0.234",
+	"version": "1.0.235",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -136,16 +136,6 @@
 			"require": "./dist/version.cjs",
 			"types": "./dist/types/version.d.ts"
 		},
-		"./preact/apis/iso": {
-			"import": "./dist/preact/apis/iso.js",
-			"require": "./dist/preact/apis/iso.cjs",
-			"types": "./dist/types/preact/apis/iso.d.ts"
-		},
-		"./preact/apis/ssr": {
-			"import": "./dist/preact/apis/ssr.js",
-			"require": "./dist/preact/apis/ssr.cjs",
-			"types": "./dist/types/preact/apis/ssr.d.ts"
-		},
 		"./preact/components/body": {
 			"import": "./dist/preact/components/body.js",
 			"require": "./dist/preact/components/body.cjs",
@@ -175,6 +165,16 @@
 			"import": "./dist/preact/routes/404.js",
 			"require": "./dist/preact/routes/404.cjs",
 			"types": "./dist/types/preact/routes/404.d.ts"
+		},
+		"./preact/apis/iso": {
+			"import": "./dist/preact/apis/iso.js",
+			"require": "./dist/preact/apis/iso.cjs",
+			"types": "./dist/types/preact/apis/iso.d.ts"
+		},
+		"./preact/apis/ssr": {
+			"import": "./dist/preact/apis/ssr.js",
+			"require": "./dist/preact/apis/ssr.cjs",
+			"types": "./dist/types/preact/apis/ssr.d.ts"
 		}
 	},
 	"sideEffects": [
@@ -201,14 +201,14 @@
 		"./src/type.ts",
 		"./src/url.ts",
 		"./src/version.ts",
-		"./src/preact/apis/iso.tsx",
-		"./src/preact/apis/ssr.tsx",
 		"./src/preact/components/body.tsx",
 		"./src/preact/components/data.tsx",
 		"./src/preact/components/head.tsx",
 		"./src/preact/components/html.tsx",
 		"./src/preact/components/router.tsx",
-		"./src/preact/routes/404.tsx"
+		"./src/preact/routes/404.tsx",
+		"./src/preact/apis/iso.tsx",
+		"./src/preact/apis/ssr.tsx"
 	],
 	"module": "./dist/index.js",
 	"main": "./dist/index.cjs",
@@ -222,7 +222,7 @@
 	},
 	"dependencies": {},
 	"peerDependencies": {
-		"@clevercanyon/preact-iso.fork": "^2.3.57",
+		"@clevercanyon/preact-iso.fork": "^2.3.58",
 		"fast-equals": "^4.0.3",
 		"ignore": "^5.2.4",
 		"luxon": "^3.4.3",
@@ -238,7 +238,7 @@
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/dev-deps": "^1.0.213"
+		"@clevercanyon/dev-deps": "^1.0.214"
 	},
 	"overrides": {},
 	"cpu": ["x64", "arm64"],
