--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Sat, Sep 16, 2023, 11:38:37 PM EDT.
+ * Last generated using `./tsconfig.mjs` Sat, Sep 16, 2023, 11:58:15 PM EDT.
  */
 {
 	"include": ["./*.d.ts", "./src/**/*"],
@@ -69,6 +69,8 @@
 		"**/Temporary Items/**",
 		"**/.*/**",
 		"**/*.tsbuildinfo/**",
+		"**/!.env.vault/**",
+		"**/!.env.project/**",
 		"**/tsconfig.*/**",
 		"**/wrangler.*/**",
 		"**/*.config.*/**",
