--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "1.0.240",
+	"version": "1.0.241",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -166,11 +166,6 @@
 			"require": "./dist/preact/components/router.cjs",
 			"types": "./dist/types/preact/components/router.d.ts"
 		},
-		"./preact/routes/404": {
-			"import": "./dist/preact/routes/404.js",
-			"require": "./dist/preact/routes/404.cjs",
-			"types": "./dist/types/preact/routes/404.d.ts"
-		},
 		"./preact/apis/iso": {
 			"import": "./dist/preact/apis/iso.js",
 			"require": "./dist/preact/apis/iso.cjs",
@@ -180,6 +175,11 @@
 			"import": "./dist/preact/apis/ssr.js",
 			"require": "./dist/preact/apis/ssr.cjs",
 			"types": "./dist/types/preact/apis/ssr.d.ts"
+		},
+		"./preact/routes/404": {
+			"import": "./dist/preact/routes/404.js",
+			"require": "./dist/preact/routes/404.cjs",
+			"types": "./dist/types/preact/routes/404.d.ts"
 		}
 	},
 	"sideEffects": [
@@ -212,9 +212,9 @@
 		"./src/preact/components/head.tsx",
 		"./src/preact/components/html.tsx",
 		"./src/preact/components/router.tsx",
-		"./src/preact/routes/404.tsx",
 		"./src/preact/apis/iso.tsx",
-		"./src/preact/apis/ssr.tsx"
+		"./src/preact/apis/ssr.tsx",
+		"./src/preact/routes/404.tsx"
 	],
 	"module": "./dist/index.js",
 	"main": "./dist/index.cjs",
