--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Sun, Sep 17, 2023, 2:18:18 AM EDT.
+ * Last generated using `./tsconfig.mjs` Tue, Sep 19, 2023, 3:07:03 AM EDT.
  */
 {
 	"include": ["./*.d.ts", "./src/**/*"],
@@ -49,7 +49,7 @@
 		"**/ehthumbs.db/**",
 		"**/Desktop.ini/**",
 		"**/$RECYCLE.BIN/**",
-		"**/Icon\r/**",
+		"**/Icon/**",
 		"**/*.icloud/**",
 		"**/.DS_Store/**",
 		"**/.disk_label/**",
@@ -69,8 +69,8 @@
 		"**/Temporary Items/**",
 		"**/.*/**",
 		"**/*.tsbuildinfo/**",
-		"**/!.env.vault/**",
-		"**/!.env.project/**",
+		"!**/.env.vault/**",
+		"!**/.env.project/**",
 		"**/tsconfig.*/**",
 		"**/wrangler.*/**",
 		"**/*.config.*/**",
@@ -116,5 +116,20 @@
 			"react-dom": ["../node_modules/preact/compat"],
 			"react-dom/test-utils": ["../node_modules/preact/test-utils"]
 		}
+	},
+	"mdx": {
+		"plugins": [
+			"remark-frontmatter",
+			"remark-gfm",
+			"remark-smartypants",
+			[
+				"remark-oembed",
+				{
+					"syncWidget": true
+				}
+			],
+			"remark-mermaidjs",
+			"remark-directive"
+		]
 	}
 }
