Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "1.0.242",
+	"version": "1.0.243",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -151,11 +151,6 @@
 			"require": "./dist/preact/apis/ssr.cjs",
 			"types": "./dist/types/preact/apis/ssr.d.ts"
 		},
-		"./preact/routes/404": {
-			"import": "./dist/preact/routes/404.js",
-			"require": "./dist/preact/routes/404.cjs",
-			"types": "./dist/types/preact/routes/404.d.ts"
-		},
 		"./preact/components/body": {
 			"import": "./dist/preact/components/body.js",
 			"require": "./dist/preact/components/body.cjs",
@@ -180,6 +175,11 @@
 			"import": "./dist/preact/components/router.js",
 			"require": "./dist/preact/components/router.cjs",
 			"types": "./dist/types/preact/components/router.d.ts"
+		},
+		"./preact/routes/404": {
+			"import": "./dist/preact/routes/404.js",
+			"require": "./dist/preact/routes/404.cjs",
+			"types": "./dist/types/preact/routes/404.d.ts"
 		}
 	},
 	"sideEffects": [
@@ -209,12 +209,12 @@
 		"./src/version.ts",
 		"./src/preact/apis/iso.tsx",
 		"./src/preact/apis/ssr.tsx",
-		"./src/preact/routes/404.tsx",
 		"./src/preact/components/body.tsx",
 		"./src/preact/components/data.tsx",
 		"./src/preact/components/head.tsx",
 		"./src/preact/components/html.tsx",
-		"./src/preact/components/router.tsx"
+		"./src/preact/components/router.tsx",
+		"./src/preact/routes/404.tsx"
 	],
 	"module": "./dist/index.js",
 	"main": "./dist/index.cjs",
