--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 19, 2023, 3:07:03 AM EDT.
+# Last generated Tue, Sep 19, 2023, 5:09:55 AM EDT.
 
 # Default
 
@@ -57,6 +57,12 @@
 *.h text
 *.srt text
 
+# PHP
+
+*.php text
+*.phtm text
+*.phtml text
+
 # Ruby
 
 *.rb text
@@ -65,14 +71,6 @@
 
 *.py text
 
-# PHP
-
-*.php text
-*.phtm text
-*.phtml text
-*.phar binary
-*.phps text
-
 # ASP
 
 *.asp text
@@ -80,6 +78,8 @@
 
 # Perl
 
+*.pl6 text
+*.perl6 text
 *.cgi text
 *.pl text
 *.plx text
@@ -91,11 +91,26 @@
 *.sh text
 *.zsh text
 *.bash text
-*.bat text
+
+# Node Archive
+
+*.node binary
+
+# PHP Archive
+
+*.phar binary
+
+# PHP Source
+
+*.phps text
 
 # Docker
 
 *.dockerfile text
+
+# JS Automation
+
+*.jxa text
 
 # AppleScript
 
@@ -103,29 +118,32 @@
 *.scpt binary
 *.scptd binary
 
+# Batch
+
+*.bat text
+
 # JavaScript
 
-*.node binary
+*.wasm binary
 *.js text
-*.jsx text
 *.cjs text
-*.cjsx text
 *.mjs text
+*.jsx text
+*.cjsx text
 *.mjsx text
 
 # TypeScript
 
 *.ts text
-*.tsx text
 *.cts text
-*.ctsx text
 *.mts text
+*.tsx text
+*.ctsx text
 *.mtsx text
 
 # Style
 
 *.css text
-*.sass text
 *.scss text
 *.less text
 *.xsd text
@@ -149,8 +167,18 @@
 
 # Other Template
 
-*.tmpl text
 *.tpl text
+*.tmpl text
+
+# SQL
+
+*.sql text
+*.sqlite text
+
+# Delimited
+
+*.csv text
+*.tsv text
 
 # JSON
 
@@ -167,22 +195,35 @@
 *.yaml text
 *.yml text
 
+# INI
+
+*.ini text
+
+# Properties
+
+*.env text
+*.env.* text
+*.properties text
+*.props text
+*.exacolors text
+
+# Apache
+
+*.conf text
+*.htaccess text
+*.htpasswd text
+
+# I18n
+
+*.po text
+*.mo binary
+
 # XML
 
 *.dtd text
 *.xhtm text
 *.xhtml text
 *.xml text
-
-# SQL
-
-*.sql text
-*.sqlite text
-
-# Delimited
-
-*.csv text
-*.tsv text
 
 # Calendar
 
@@ -196,32 +237,29 @@
 *.rss text
 *.rss2 text
 
-# I18n
-
-*.po text
-*.mo binary
-
 # Log
 
 *.log text
 
+# Other Data
+
+*.hex binary
+
 # Other Config
 
-*.htaccess text
-*.htpasswd text
-*.ini text
-*.cfg text
-*.conf text
-*.properties text
+*.babelrc text
+*.npmrc text
+*.yarnrc text
+*.inputrc text
+*.tsbuildinfo text
+*.editorconfig text
+*.shellcheckrc text
+*.browserslistrc text
+*.gitchange text
 *.gitconfig text
 *.gitattributes text
 *.gitignore text
-*.gitchange text
-*.npmrc text
 *.npmignore text
-*.yarnrc text
-*.babelrc text
-*.shellcheckrc text
 *.eslintignore text
 *.prettierignore text
 
@@ -314,6 +352,12 @@
 *.zip binary
 *.sketch binary
 
+# Certificate
+
+*.csr text
+*.crt text
+*.pem text
+
 # Other Application
 
 *.app binary
@@ -324,7 +368,6 @@
 *.dfxp binary
 *.dll binary
 *.exe binary
-*.pem text
 *.so binary
 
 # Google
