Project update. [p][robotic]

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,19 +9,24 @@
  */
 {
 	"recommendations": [
+		"bierner.markdown-checkbox",
+		"bierner.markdown-footnotes",
+		"bierner.markdown-mermaid",
 		"dbaeumer.vscode-eslint",
 		"duniul.dircolors",
 		"esbenp.prettier-vscode",
 		"exiasr.hadolint",
 		"ExodiusStudios.comment-anchors",
+		"idleberg.applescript",
 		"leonzalion.vscode-ejs",
 		"mrmlnc.vscode-apache",
+		"ms-vscode.hexeditor",
 		"rohit-gohri.format-code-action",
+		"sissel.shopify-liquid",
 		"stylelint.vscode-stylelint",
 		"tamasfe.even-better-toml",
 		"timonwong.shellcheck",
 		"unifiedjs.vscode-mdx",
-		"xyc.vscode-mdx-preview",
 		"webben.browserslist"
 	]
 
