Project update. [p][robotic]

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 19, 2023, 6:22:03 AM EDT.
+# Last generated Tue, Sep 19, 2023, 6:38:49 AM EDT.
 
 # Default
 
@@ -78,8 +78,6 @@
 
 # Perl
 
-*.pl6 text
-*.perl6 text
 *.cgi text
 *.pl text
 *.plx text
@@ -162,13 +160,11 @@
 
 # Liquid
 
-*.liq text
 *.liquid text
 
 # Other Template
 
 *.tpl text
-*.tmpl text
 
 # SQL
 
@@ -205,7 +201,6 @@
 *.env.* text
 *.properties text
 *.props text
-*.exacolors text
 
 # Apache
 
@@ -439,7 +434,13 @@
 
 *.key binary
 *.numbers binary
-*.pages binary
+*.pages binary# Specials
+
+*.env.* text
+CODEOWNERS text
+**/src/_headers text
+**/src/_redirects text
+**/src/cargo/_routes.json text
 
 ##
 # LFS storage rules.
