--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 19, 2023, 6:38:49 AM EDT.
+# Last generated Tue, Sep 19, 2023, 11:53:13 PM EDT.
 
 # Default
 
@@ -198,7 +198,6 @@
 # Properties
 
 *.env text
-*.env.* text
 *.properties text
 *.props text
 
