--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 19, 2023, 6:38:49 AM EDT.
+# Last generated Tue, Sep 19, 2023, 11:53:13 PM EDT.
 
 # Locals
 
