--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Tue, Sep 19, 2023, 6:38:50 AM EDT.
+ * Last generated using `./tsconfig.mjs` Tue, Sep 19, 2023, 11:53:13 PM EDT.
  */
 {
 	"include": ["./*.d.ts", "./src/**/*"],
