--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Tue, Sep 19, 2023, 11:53:13 PM EDT.
+ * Last generated using `./tsconfig.mjs` Wed, Sep 20, 2023, 12:39:33 AM EDT.
  */
 {
 	"include": ["./*.d.ts", "./src/**/*"],
@@ -68,9 +68,9 @@
 		"**/Network Trash Folder/**",
 		"**/Temporary Items/**",
 		"**/.*/**",
-		"**/*.tsbuildinfo/**",
 		"!**/.env.vault/**",
 		"!**/.env.project/**",
+		"**/*.tsbuildinfo/**",
 		"**/tsconfig.*/**",
 		"**/wrangler.*/**",
 		"**/*.config.*/**",
