--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Tue, Sep 19, 2023, 11:53:14 PM EDT.
+# Last generated using `./wrangler.mjs` Wed, Sep 20, 2023, 12:39:34 AM EDT.
 ##
 
 compatibility_date = "2023-08-15"
@@ -85,12 +85,6 @@ exclude = [
   "*.code-search",
   "*.code-workspace",
   "*.ctags",
-  "dist",
-  ".yarn",
-  "vendor",
-  "node_modules",
-  "jspm_packages",
-  "bower_components",
   ".env*",
   ".flaskenv*",
   "!.env.vault",
@@ -109,6 +103,11 @@ exclude = [
   ".docker",
   ".vagrant",
   ".elasticbeanstalk",
+  ".yarn",
+  "vendor",
+  "node_modules",
+  "jspm_packages",
+  "bower_components",
   ".git",
   ".svn",
   "_svn",
@@ -139,7 +138,9 @@ exclude = [
   ".DocumentRevisions-V100",
   "Network Trash Folder",
   "Temporary Items",
+  "dist",
   "!dist",
+  ".*",
   "tsconfig.*",
   "wrangler.*",
   "*.config.*",
@@ -147,7 +148,6 @@ exclude = [
   "yarn.lock",
   "composer.lock",
   "package-lock.json",
-  ".*",
   "src",
   "dev",
   "sandbox",
