--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 19, 2023, 11:53:13 PM EDT.
+# Last generated Wed, Sep 20, 2023, 12:39:33 AM EDT.
 
 [production]
 last 1 chrome versions
