--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 19, 2023, 11:53:13 PM EDT.
+# Last generated Wed, Sep 20, 2023, 12:39:32 AM EDT.
 
 # Locals
 
@@ -79,9 +79,58 @@
 
 *.ctags
 
-# Dist
+# Tooling
 
-dist
+# » Dotenv
+
+.env*
+.flaskenv*
+!.env.vault
+!.env.project
+
+# » TypeScript
+
+.tscache
+*.tsbuildinfo
+
+# » Vite
+
+.vite
+.vitest
+
+# » Wrangler
+
+.wrangler
+.dev.vars
+.dev.vars.*
+
+# » Rollup
+
+.rollup
+
+# » Webpack
+
+.webpack
+
+# » Linaria
+
+.linaria-cache
+
+# » SASS
+
+.sass-cache
+
+# » Docker
+
+.docker
+
+# » Vagrant
+
+.vagrant
+
+# » Elastic Beanstalk
+
+.elasticbeanstalk
 
 # Packages
 
@@ -104,57 +153,6 @@ jspm_packages
 # » Bower
 
 bower_components
-
-# Dotenv
-
-.env*
-.flaskenv*
-!.env.vault
-!.env.project
-
-# TypeScript
-
-.tscache
-*.tsbuildinfo
-
-# Vite
-
-.vite
-.vitest
-
-# Wrangler
-
-.wrangler
-.dev.vars
-.dev.vars.*
-
-# Rollup
-
-.rollup
-
-# Webpack
-
-.webpack
-
-# Linaria
-
-.linaria-cache
-
-# SASS
-
-.sass-cache
-
-# Docker
-
-.docker
-
-# Vagrant
-
-.vagrant
-
-# Elastic Beanstalk
-
-.elasticbeanstalk
 
 # Version Control
 
@@ -215,9 +213,17 @@ Icon
 Network Trash Folder
 Temporary Items
 
+# Dist
+
+dist
+
 # npm:Dist
 
 !dist
+
+# npm:Dots
+
+.*
 
 # npm:Configs
 
@@ -231,10 +237,6 @@ config.gypi
 yarn.lock
 composer.lock
 package-lock.json
-
-# npm:Dots
-
-.*
 
 # npm:Src
 
