--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Sep 19, 2023, 11:53:13 PM EDT.
+# Last generated Wed, Sep 20, 2023, 12:39:32 AM EDT.
 
 # `.npmrc` unsupported at this time.
 # Prettier chokes on `:` in auth tokens.
@@ -28,10 +28,6 @@
 # @todo Build or find an EJS plugin.
 
 *.ejs
-
-# Dist
-
-dist
 
 # Packages
 
@@ -113,6 +109,10 @@ Icon
 .DocumentRevisions-V100
 Network Trash Folder
 Temporary Items
+
+# Dist
+
+dist
 
 # </generated:end>
 
