--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Wed, Sep 20, 2023, 12:59:26 AM EDT.
+# Last generated using `./wrangler.mjs` Wed, Sep 20, 2023, 1:19:08 AM EDT.
 ##
 
 compatibility_date = "2023-08-15"
@@ -68,7 +68,6 @@ exclude = [
   "._*",
   ".~*",
   ".#*",
-  "*.local",
   "*.log",
   "*.logs",
   "*~",
@@ -85,10 +84,8 @@ exclude = [
   "*.code-search",
   "*.code-workspace",
   "*.ctags",
-  ".env*",
-  ".flaskenv*",
-  "!.env.vault",
-  "!.env.project",
+  ".envs",
+  ".env.me",
   ".tscache",
   "*.tsbuildinfo",
   ".vite",
