--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Wed, Sep 20, 2023, 1:19:07 AM EDT.
+# Last generated Wed, Sep 20, 2023, 10:17:10 PM EDT.
 
 [production]
 last 1 chrome versions
