--- a/.npmignore
+++ b/.npmignore
@@ -25,13 +25,22 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Wed, Sep 20, 2023, 1:19:07 AM EDT.
+# Last generated Wed, Sep 20, 2023, 10:17:10 PM EDT.
 
 # Locals
 
 ._*
 .~*
 .#*
+
+# Envs
+
+.envs
+*.env
+.env*
+.flaskenv*
+!.env.project
+!.env.vault
 
 # Logs
 
@@ -52,27 +61,17 @@
 
 # Editors
 
-# » Vim
+# » VS Code
 
-.*.swp
+*.code-*
 
 # » IntelliJ
 
 .idea
 
-# » Sublime
+# » Vim
 
-*.sublime-project
-*.sublime-workspace
-
-# » Netbeans
-
-*.nbproject
-
-# » VS Code
-
-*.code-search
-*.code-workspace
+.*.swp
 
 # » CTAGs
 
@@ -82,7 +81,6 @@
 
 # » Dotenv
 
-.envs
 .env.me
 
 # » TypeScript
@@ -295,7 +293,7 @@ benchmarks
 #
 # Please do not attempt to inject exceptions by customizing your project’s `./.npmignore` file
 # in ways that loosen our standard defaults. We have tooling in place that will conflict with your efforts.
-# For example, `vite-plugin-c10n-post-process` will automatically prune files from a resulting `./.dist`
+# For example, `vite-plugin-c10n-post-process` will automatically prune files from a resulting `./dist`
 # built with our tooling. The pruning that it does strictly adheres to our default `./.npmignore` rules,
 # and intentionally does not factor in your customizations.
 #
