--- a/package.json
+++ b/package.json
@@ -1,287 +1,287 @@
 {
-	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"version": "1.0.261",
-	"license": "GPL-3.0-or-later",
-	"name": "@clevercanyon/utilities",
-	"description": "Utilities for JavaScript apps running in any environment.",
-	"repository": "https://github.com/clevercanyon/utilities",
-	"homepage": "https://github.com/clevercanyon/utilities#readme",
-	"bugs": "https://github.com/clevercanyon/utilities/issues",
-	"funding": "https://github.com/sponsors/clevercanyon",
-	"keywords": ["clevercanyon"],
-	"author": {
-		"name": "Clever Canyon",
-		"url": "https://clevercanyon.com"
-	},
-	"contributors": [],
-	"type": "module",
-	"bin": {},
-	"imports": {},
-	"exports": {
-		".": {
-			"import": "./dist/index.js",
-			"require": "./dist/index.cjs",
-			"types": "./dist/types/index.d.ts"
-		},
-		"./app": {
-			"import": "./dist/app.js",
-			"require": "./dist/app.cjs",
-			"types": "./dist/types/app.d.ts"
-		},
-		"./brand": {
-			"import": "./dist/brand.js",
-			"require": "./dist/brand.cjs",
-			"types": "./dist/types/brand.d.ts"
-		},
-		"./class": {
-			"import": "./dist/class.js",
-			"require": "./dist/class.cjs",
-			"types": "./dist/types/class.d.ts"
-		},
-		"./cookie": {
-			"import": "./dist/cookie.js",
-			"require": "./dist/cookie.cjs",
-			"types": "./dist/types/cookie.d.ts"
-		},
-		"./crypto": {
-			"import": "./dist/crypto.js",
-			"require": "./dist/crypto.cjs",
-			"types": "./dist/types/crypto.d.ts"
-		},
-		"./env": {
-			"import": "./dist/env.js",
-			"require": "./dist/env.cjs",
-			"types": "./dist/types/env.d.ts"
-		},
-		"./fn": {
-			"import": "./dist/fn.js",
-			"require": "./dist/fn.cjs",
-			"types": "./dist/types/fn.d.ts"
-		},
-		"./http": {
-			"import": "./dist/http.js",
-			"require": "./dist/http.cjs",
-			"types": "./dist/types/http.d.ts"
-		},
-		"./is": {
-			"import": "./dist/is.js",
-			"require": "./dist/is.cjs",
-			"types": "./dist/types/is.d.ts"
-		},
-		"./json": {
-			"import": "./dist/json.js",
-			"require": "./dist/json.cjs",
-			"types": "./dist/types/json.d.ts"
-		},
-		"./mime": {
-			"import": "./dist/mime.js",
-			"require": "./dist/mime.cjs",
-			"types": "./dist/types/mime.d.ts"
-		},
-		"./moize": {
-			"import": "./dist/moize.js",
-			"require": "./dist/moize.cjs",
-			"types": "./dist/types/moize.d.ts"
-		},
-		"./obj": {
-			"import": "./dist/obj.js",
-			"require": "./dist/obj.cjs",
-			"types": "./dist/types/obj.d.ts"
-		},
-		"./obp": {
-			"import": "./dist/obp.js",
-			"require": "./dist/obp.cjs",
-			"types": "./dist/types/obp.d.ts"
-		},
-		"./path": {
-			"import": "./dist/path.js",
-			"require": "./dist/path.cjs",
-			"types": "./dist/types/path.d.ts"
-		},
-		"./preact": {
-			"import": "./dist/preact.js",
-			"require": "./dist/preact.cjs",
-			"types": "./dist/types/preact.d.ts"
-		},
-		"./str": {
-			"import": "./dist/str.js",
-			"require": "./dist/str.cjs",
-			"types": "./dist/types/str.d.ts"
-		},
-		"./symbol": {
-			"import": "./dist/symbol.js",
-			"require": "./dist/symbol.cjs",
-			"types": "./dist/types/symbol.d.ts"
-		},
-		"./time": {
-			"import": "./dist/time.js",
-			"require": "./dist/time.cjs",
-			"types": "./dist/types/time.d.ts"
-		},
-		"./to": {
-			"import": "./dist/to.js",
-			"require": "./dist/to.cjs",
-			"types": "./dist/types/to.d.ts"
-		},
-		"./type": {
-			"import": "./dist/type.js",
-			"require": "./dist/type.cjs",
-			"types": "./dist/types/type.d.ts"
-		},
-		"./url": {
-			"import": "./dist/url.js",
-			"require": "./dist/url.cjs",
-			"types": "./dist/types/url.d.ts"
-		},
-		"./version": {
-			"import": "./dist/version.js",
-			"require": "./dist/version.cjs",
-			"types": "./dist/types/version.d.ts"
-		},
-		"./preact/apis/iso": {
-			"import": "./dist/preact/apis/iso.js",
-			"require": "./dist/preact/apis/iso.cjs",
-			"types": "./dist/types/preact/apis/iso.d.ts"
-		},
-		"./preact/apis/ssr": {
-			"import": "./dist/preact/apis/ssr.js",
-			"require": "./dist/preact/apis/ssr.cjs",
-			"types": "./dist/types/preact/apis/ssr.d.ts"
-		},
-		"./preact/components/body": {
-			"import": "./dist/preact/components/body.js",
-			"require": "./dist/preact/components/body.cjs",
-			"types": "./dist/types/preact/components/body.d.ts"
-		},
-		"./preact/components/data": {
-			"import": "./dist/preact/components/data.js",
-			"require": "./dist/preact/components/data.cjs",
-			"types": "./dist/types/preact/components/data.d.ts"
-		},
-		"./preact/components/head": {
-			"import": "./dist/preact/components/head.js",
-			"require": "./dist/preact/components/head.cjs",
-			"types": "./dist/types/preact/components/head.d.ts"
-		},
-		"./preact/components/html": {
-			"import": "./dist/preact/components/html.js",
-			"require": "./dist/preact/components/html.cjs",
-			"types": "./dist/types/preact/components/html.d.ts"
-		},
-		"./preact/components/router": {
-			"import": "./dist/preact/components/router.js",
-			"require": "./dist/preact/components/router.cjs",
-			"types": "./dist/types/preact/components/router.d.ts"
-		},
-		"./preact/routes/404": {
-			"import": "./dist/preact/routes/404.js",
-			"require": "./dist/preact/routes/404.cjs",
-			"types": "./dist/types/preact/routes/404.d.ts"
-		}
-	},
-	"sideEffects": [
-		"./src/app.ts",
-		"./src/brand.ts",
-		"./src/class.ts",
-		"./src/cookie.ts",
-		"./src/crypto.ts",
-		"./src/env.ts",
-		"./src/fn.ts",
-		"./src/http.ts",
-		"./src/index.ts",
-		"./src/is.ts",
-		"./src/json.ts",
-		"./src/mime.ts",
-		"./src/moize.ts",
-		"./src/obj.ts",
-		"./src/obp.ts",
-		"./src/path.ts",
-		"./src/preact.tsx",
-		"./src/str.ts",
-		"./src/symbol.ts",
-		"./src/time.ts",
-		"./src/to.ts",
-		"./src/type.ts",
-		"./src/url.ts",
-		"./src/version.ts",
-		"./src/preact/apis/iso.tsx",
-		"./src/preact/apis/ssr.tsx",
-		"./src/preact/components/body.tsx",
-		"./src/preact/components/data.tsx",
-		"./src/preact/components/head.tsx",
-		"./src/preact/components/html.tsx",
-		"./src/preact/components/router.tsx",
-		"./src/preact/routes/404.tsx"
-	],
-	"module": "./dist/index.js",
-	"main": "./dist/index.cjs",
-	"browser": "",
-	"unpkg": "./dist/index.js",
-	"types": "./dist/types/index.d.ts",
-	"typesVersions": {
-		">=3.1": {
-			"./*": ["./dist/types/*"]
-		}
-	},
-	"dependencies": {},
-	"peerDependencies": {
-		"@clevercanyon/preact-iso.fork": "^2.3.59",
-		"fast-equals": "^4.0.3",
-		"ignore": "^5.2.4",
-		"luxon": "^3.4.3",
-		"micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.56",
-		"moize": "^6.1.6",
-		"preact": "^10.17.1",
-		"preact-render-to-string": "^6.2.1",
-		"react": "npm:@preact/compat@^17.1.2",
-		"react-dom": "npm:@preact/compat@^17.1.2",
-		"semver": "^7.5.4"
-	},
-	"peerDependenciesMeta": {},
-	"optionalDependencies": {},
-	"bundleDependencies": [],
-	"devDependencies": {
-		"@clevercanyon/dev-deps": "^1.0.226"
-	},
-	"overrides": {},
-	"cpu": ["x64", "arm64"],
-	"os": ["darwin", "linux"],
-	"engines": {
-		"node": "^19.1.0 || ^20.5.1",
-		"npm": "^8.19.3 || ^9.2.0"
-	},
-	"config": {
-		"c10n": {
-			"&": {
-				"dotfiles": {
-					"lock": []
-				},
-				"build": {
-					"appType": "lib",
-					"targetEnv": "any",
-					"entryFiles": ["./src/*.{ts,tsx}", "./src/preact/*/*.{ts,tsx}"]
-				},
-				"ssrBuild": {
-					"appType": "",
-					"targetEnv": "",
-					"entryFiles": []
-				},
-				"github": {
-					"teams": {
-						"engineers": "pull",
-						"architects": "push"
-					},
-					"labels": {},
-					"configVersion": "1.0.9",
-					"envsVersion": ""
-				},
-				"npmjs": {
-					"configVersions": "1.0.9,1.0.9"
-				}
-			}
-		}
-	}
+    "private": false,
+    "publishConfig": {
+        "access": "public"
+    },
+    "version": "1.0.262",
+    "license": "GPL-3.0-or-later",
+    "name": "@clevercanyon/utilities",
+    "description": "Utilities for JavaScript apps running in any environment.",
+    "repository": "https://github.com/clevercanyon/utilities",
+    "homepage": "https://github.com/clevercanyon/utilities#readme",
+    "bugs": "https://github.com/clevercanyon/utilities/issues",
+    "funding": "https://github.com/sponsors/clevercanyon",
+    "keywords": ["clevercanyon"],
+    "author": {
+        "name": "Clever Canyon",
+        "url": "https://clevercanyon.com"
+    },
+    "contributors": [],
+    "type": "module",
+    "bin": {},
+    "imports": {},
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs",
+            "types": "./dist/types/index.d.ts"
+        },
+        "./app": {
+            "import": "./dist/app.js",
+            "require": "./dist/app.cjs",
+            "types": "./dist/types/app.d.ts"
+        },
+        "./brand": {
+            "import": "./dist/brand.js",
+            "require": "./dist/brand.cjs",
+            "types": "./dist/types/brand.d.ts"
+        },
+        "./class": {
+            "import": "./dist/class.js",
+            "require": "./dist/class.cjs",
+            "types": "./dist/types/class.d.ts"
+        },
+        "./cookie": {
+            "import": "./dist/cookie.js",
+            "require": "./dist/cookie.cjs",
+            "types": "./dist/types/cookie.d.ts"
+        },
+        "./crypto": {
+            "import": "./dist/crypto.js",
+            "require": "./dist/crypto.cjs",
+            "types": "./dist/types/crypto.d.ts"
+        },
+        "./env": {
+            "import": "./dist/env.js",
+            "require": "./dist/env.cjs",
+            "types": "./dist/types/env.d.ts"
+        },
+        "./fn": {
+            "import": "./dist/fn.js",
+            "require": "./dist/fn.cjs",
+            "types": "./dist/types/fn.d.ts"
+        },
+        "./http": {
+            "import": "./dist/http.js",
+            "require": "./dist/http.cjs",
+            "types": "./dist/types/http.d.ts"
+        },
+        "./is": {
+            "import": "./dist/is.js",
+            "require": "./dist/is.cjs",
+            "types": "./dist/types/is.d.ts"
+        },
+        "./json": {
+            "import": "./dist/json.js",
+            "require": "./dist/json.cjs",
+            "types": "./dist/types/json.d.ts"
+        },
+        "./mime": {
+            "import": "./dist/mime.js",
+            "require": "./dist/mime.cjs",
+            "types": "./dist/types/mime.d.ts"
+        },
+        "./moize": {
+            "import": "./dist/moize.js",
+            "require": "./dist/moize.cjs",
+            "types": "./dist/types/moize.d.ts"
+        },
+        "./obj": {
+            "import": "./dist/obj.js",
+            "require": "./dist/obj.cjs",
+            "types": "./dist/types/obj.d.ts"
+        },
+        "./obp": {
+            "import": "./dist/obp.js",
+            "require": "./dist/obp.cjs",
+            "types": "./dist/types/obp.d.ts"
+        },
+        "./path": {
+            "import": "./dist/path.js",
+            "require": "./dist/path.cjs",
+            "types": "./dist/types/path.d.ts"
+        },
+        "./preact": {
+            "import": "./dist/preact.js",
+            "require": "./dist/preact.cjs",
+            "types": "./dist/types/preact.d.ts"
+        },
+        "./str": {
+            "import": "./dist/str.js",
+            "require": "./dist/str.cjs",
+            "types": "./dist/types/str.d.ts"
+        },
+        "./symbol": {
+            "import": "./dist/symbol.js",
+            "require": "./dist/symbol.cjs",
+            "types": "./dist/types/symbol.d.ts"
+        },
+        "./time": {
+            "import": "./dist/time.js",
+            "require": "./dist/time.cjs",
+            "types": "./dist/types/time.d.ts"
+        },
+        "./to": {
+            "import": "./dist/to.js",
+            "require": "./dist/to.cjs",
+            "types": "./dist/types/to.d.ts"
+        },
+        "./type": {
+            "import": "./dist/type.js",
+            "require": "./dist/type.cjs",
+            "types": "./dist/types/type.d.ts"
+        },
+        "./url": {
+            "import": "./dist/url.js",
+            "require": "./dist/url.cjs",
+            "types": "./dist/types/url.d.ts"
+        },
+        "./version": {
+            "import": "./dist/version.js",
+            "require": "./dist/version.cjs",
+            "types": "./dist/types/version.d.ts"
+        },
+        "./preact/apis/iso": {
+            "import": "./dist/preact/apis/iso.js",
+            "require": "./dist/preact/apis/iso.cjs",
+            "types": "./dist/types/preact/apis/iso.d.ts"
+        },
+        "./preact/apis/ssr": {
+            "import": "./dist/preact/apis/ssr.js",
+            "require": "./dist/preact/apis/ssr.cjs",
+            "types": "./dist/types/preact/apis/ssr.d.ts"
+        },
+        "./preact/routes/404": {
+            "import": "./dist/preact/routes/404.js",
+            "require": "./dist/preact/routes/404.cjs",
+            "types": "./dist/types/preact/routes/404.d.ts"
+        },
+        "./preact/components/body": {
+            "import": "./dist/preact/components/body.js",
+            "require": "./dist/preact/components/body.cjs",
+            "types": "./dist/types/preact/components/body.d.ts"
+        },
+        "./preact/components/data": {
+            "import": "./dist/preact/components/data.js",
+            "require": "./dist/preact/components/data.cjs",
+            "types": "./dist/types/preact/components/data.d.ts"
+        },
+        "./preact/components/head": {
+            "import": "./dist/preact/components/head.js",
+            "require": "./dist/preact/components/head.cjs",
+            "types": "./dist/types/preact/components/head.d.ts"
+        },
+        "./preact/components/html": {
+            "import": "./dist/preact/components/html.js",
+            "require": "./dist/preact/components/html.cjs",
+            "types": "./dist/types/preact/components/html.d.ts"
+        },
+        "./preact/components/router": {
+            "import": "./dist/preact/components/router.js",
+            "require": "./dist/preact/components/router.cjs",
+            "types": "./dist/types/preact/components/router.d.ts"
+        }
+    },
+    "sideEffects": [
+        "./src/app.ts",
+        "./src/brand.ts",
+        "./src/class.ts",
+        "./src/cookie.ts",
+        "./src/crypto.ts",
+        "./src/env.ts",
+        "./src/fn.ts",
+        "./src/http.ts",
+        "./src/index.ts",
+        "./src/is.ts",
+        "./src/json.ts",
+        "./src/mime.ts",
+        "./src/moize.ts",
+        "./src/obj.ts",
+        "./src/obp.ts",
+        "./src/path.ts",
+        "./src/preact.tsx",
+        "./src/str.ts",
+        "./src/symbol.ts",
+        "./src/time.ts",
+        "./src/to.ts",
+        "./src/type.ts",
+        "./src/url.ts",
+        "./src/version.ts",
+        "./src/preact/apis/iso.tsx",
+        "./src/preact/apis/ssr.tsx",
+        "./src/preact/routes/404.tsx",
+        "./src/preact/components/body.tsx",
+        "./src/preact/components/data.tsx",
+        "./src/preact/components/head.tsx",
+        "./src/preact/components/html.tsx",
+        "./src/preact/components/router.tsx"
+    ],
+    "module": "./dist/index.js",
+    "main": "./dist/index.cjs",
+    "browser": "",
+    "unpkg": "./dist/index.js",
+    "types": "./dist/types/index.d.ts",
+    "typesVersions": {
+        ">=3.1": {
+            "./*": ["./dist/types/*"]
+        }
+    },
+    "dependencies": {},
+    "peerDependencies": {
+        "@clevercanyon/preact-iso.fork": "^2.3.60",
+        "fast-equals": "^4.0.3",
+        "ignore": "^5.2.4",
+        "luxon": "^3.4.3",
+        "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.57",
+        "moize": "^6.1.6",
+        "preact": "^10.17.1",
+        "preact-render-to-string": "^6.2.1",
+        "react": "npm:@preact/compat@^17.1.2",
+        "react-dom": "npm:@preact/compat@^17.1.2",
+        "semver": "^7.5.4"
+    },
+    "peerDependenciesMeta": {},
+    "optionalDependencies": {},
+    "bundleDependencies": [],
+    "devDependencies": {
+        "@clevercanyon/dev-deps": "^1.0.227"
+    },
+    "overrides": {},
+    "cpu": ["x64", "arm64"],
+    "os": ["darwin", "linux"],
+    "engines": {
+        "node": "^19.1.0 || ^20.5.1",
+        "npm": "^8.19.3 || ^9.2.0"
+    },
+    "config": {
+        "c10n": {
+            "&": {
+                "dotfiles": {
+                    "lock": []
+                },
+                "build": {
+                    "appType": "lib",
+                    "targetEnv": "any",
+                    "entryFiles": ["./src/*.{ts,tsx}", "./src/preact/*/*.{ts,tsx}"]
+                },
+                "ssrBuild": {
+                    "appType": "",
+                    "targetEnv": "",
+                    "entryFiles": []
+                },
+                "github": {
+                    "teams": {
+                        "engineers": "pull",
+                        "architects": "push"
+                    },
+                    "labels": {},
+                    "configVersion": "1.0.9",
+                    "envsVersion": ""
+                },
+                "npmjs": {
+                    "configVersions": "1.0.9,1.0.9"
+                }
+            }
+        }
+    }
 }
