--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Wed, Sep 20, 2023, 1:19:08 AM EDT.
+# Last generated using `./wrangler.mjs` Wed, Sep 20, 2023, 10:17:11 PM EDT.
 ##
 
 compatibility_date = "2023-08-15"
@@ -68,6 +68,12 @@ exclude = [
   "._*",
   ".~*",
   ".#*",
+  ".envs",
+  "*.env",
+  ".env*",
+  ".flaskenv*",
+  "!.env.project",
+  "!.env.vault",
   "*.log",
   "*.logs",
   "*~",
@@ -76,15 +82,10 @@ exclude = [
   "*.orig",
   "*.patch",
   "*.diff",
-  ".*.swp",
+  "*.code-*",
   ".idea",
-  "*.sublime-project",
-  "*.sublime-workspace",
-  "*.nbproject",
-  "*.code-search",
-  "*.code-workspace",
+  ".*.swp",
   "*.ctags",
-  ".envs",
   ".env.me",
   ".tscache",
   "*.tsbuildinfo",
